@@ -1,29 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX rear-1.15-add-support-for-gentoo-kernels.patch 817 SHA256 526eeb218408d008fc05a05319c7a4b283dca05f686390bacda3a1bc5f4b8e56 SHA512 b60b77276c6be79324c8df30365950cc864751c96e6373c8231a60a6293046571cb2dad75423f3e1beaea28597c52a431e7d16b01d8c8cb6f279cd1428670659 WHIRLPOOL fd69a30db414a0db1b1f92584c62363eb4be620c293c74931e0dc5a3ef8cb6b5c154dd7deacab33e6f91bfb2df0639bbf481f5c4c242b3ab70fb47c28b43c562
 DIST rear-1.15.tar.gz 258153 SHA256 77c257a692c5e8c9e6deadf194d092718fd90e727ad3df9ed525b3a2e42f0cef SHA512 dc953c33b82f221de6c2acd7ffbb26c34b86aebcd7f8a4d7d520a1d08c15c723fed75326b8e19614f5e09f6436d392091b362b350ffad06caf10c711eb97fcb2 WHIRLPOOL e9811925d0e4a4e5d155be09f1ab212b5d70b687031c53d7c599dbbdd89d2d8aa0edb96550b9999dc7ed0ae1975b586a13eb3c666752e82bfa678fc02f84bee4
 DIST rear-1.17.0.tar.gz 299444 SHA256 c3fe36878aca14558d5cd18b0190699093031449f49db97a63eaf6f2fc3a9f6e SHA512 4b9991dc14138e6a2cd28c9fb9f1dcf46ea1a580454bb2c966024481657a102cc849baf6af5ebfa0793ac3f5ebff5b07abc87d1e4b02e1496a0f87b8cf79284e WHIRLPOOL bb83180daeeabed9464aaf55ba5a6880d1415c122f5663aecbd5e48db7137c367e02384fa176cd45d535cf867e44b4824d27633db28c59eba38f25ee7aed735c
+DIST rear-1.17.1.tar.gz 303253 SHA256 79559f44082cce3e975b6cf73ff0f50a27d59742c60971cb7db9630e7557dde8 SHA512 66595e962345c0e61c5152f11aee6745ec348acc02d0cbc717faaca8618c83211d8c45ec5e80a17ba9d8c8ad9c6d2ecb109f827d976eb0d126bfc44cf4b49afc WHIRLPOOL 8009890e690a4c692e3dec5b85cc0c7aead04fa8f752b657efc6c19086795bc0250ed5f4f70d30a46a81a69a31bc2134b510ac5a5904f5dd89827841b884a786
 EBUILD rear-1.15-r1.ebuild 1354 SHA256 a7dbc6801a93f6aa81f32e7c8ba7c983214e2fa8dced8fc17c328b49e38592b4 SHA512 8a1ea3e54a632a5ff4743c17845aec740eca0e4f024b3e70f320be99219a88bdea4fb112bebcc6a75450af3d472a4fc1f934903c43e4e9738df62af27ef22800 WHIRLPOOL 9e294d15828a991b637acafc8f0bac6462e1bee3000697e539978bdf93bc8c461332e01396955e3fe4db4b4b27e67c57097c256ba4bfeade9762527a7178a037
 EBUILD rear-1.17.0.ebuild 1330 SHA256 d8548f7a255879f9b3ac6d3ba54961aff67a36c95b28d51531c6e2869ff214a9 SHA512 22c2614cbd066ea1e628f54c14192d950035e3da6d6701bad57eaffaf093f8c28c48196c3fdb8de06df94f2742e780e2d7e10459e823b271b0cff05789f488d2 WHIRLPOOL 417b11760589a75249a6de8e129296fcd174ab1e02303070035f8ef0305aeefafabe8f86e05c0dd18a5662de8372a1b455552fee4e93b19c7c205969c0c0e955
-MISC ChangeLog 1293 SHA256 39e18088ee522fdfbe2ff24086c9ae0ec56ac4fb45be6f95e30ec9d2ab79a99d SHA512 77b675576609de41bcdecec7d2677c575c7b468a2ca0318ad5aa4145e3e784403d9970b40c4cf825daca4a8294d349323dd916d896ee157059e9a04c85414ec1 WHIRLPOOL 3b4df65985b6f7c192f2a46aef8fc27f19a802ff6804bd3b1a1853fb3a34553e71e4e168adbda16dd3468933b9d56c622b9b8a7a16402c350749b0aba4335708
+EBUILD rear-1.17.1.ebuild 1331 SHA256 64d2e933e9a936a691c545bb27568e911e8d7d90f9ad84b81f258607a5e54562 SHA512 2be098fe796c67b1f399d997da0cf30caae2a9af9c57eb42b8bb3e0c969bacf16e0f106c3bd4a21231a4b69bb1f782ec9040862e997c30a988dfdfa56fe68709 WHIRLPOOL fbe6034c03da4fd687f680444b36dae72a2ee85526280678e8f7bac2e0eb4bc31e2fca4a70e0d3b6d1f14a12fbac307430a94e99b145913c731e8faae267fcf6
+MISC ChangeLog 1413 SHA256 dd2930e11342378d5f5967e9cdab1895fcd26ca952a68cfa7c7a93355187e0e0 SHA512 1d4a50d73d743e1a5447f75b4eb9483c72ca0133c144f6787439ed02352bceb29caa6f55c026276a31be160cbf9adf7e25fe7f54014320c13230ce3efda2b198 WHIRLPOOL 293b768a312aedf9aa372d27bef4e9ba8a436010a371f78cbaa48af6eab472c9dec611f962a7a28fbfc62d0d007b9f5a840c10a921ee29df0c5f1bbbd5ab8d95
 MISC metadata.xml 860 SHA256 a6dab9db932c70b4ff65d1c1ff3bcb938518ce4557835acb9e00ae690986fcc9 SHA512 9ac350ee818cf3838a67e042a476712925e8f28e10abcb31fd8360d64100edfe151b64529b1d3332b19221de3e4611d8374802a3446e6d228308360e3ed7b439 WHIRLPOOL eb23ef2b90c478648215550ad7e21513817a3e7c058262d8dc77144ab2913321c06d9c9d6b207a023f47a0f0dc4e1dc761f2076796a7a7f9bae997a5152bd273
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVdqw7XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmi61sP/RRBXbRW/pMscSRm/YfkbVqv
-Ft+eX/MUl3AHDQFkekLg4sbKMACHlayMIXxp3tykLKlf2AeBTkyjl92S5o6mUCz2
-ykDiInKF/yQOotnqVdyjJa6Qnhe8/Ql99ku+fsYsPUygzS0KlgUDVa/xpP8PcSkk
-M6tVWaTF+tiIRKtgp5x3ENa66ZLO2Mjs3ToUz2LqYwhDar7R6Cs4Ta3QWelsd538
-InAXyJT7FaBDDU4suzSqJTB4o1gjGlNPpSpzvhdlC8rBbWQb5Uv4Xl5gkhJCyfk8
-v6tMrMuxFWxJuoR0HnLVu/MXnrhSHIPcLxzLK1ClHzI508X7HB8Qio2GY5NXz32y
-x/05iPt4Nd/tDezgPZDYWUb0zKkbSr+hF4Uy7nprTslTqYk07fcVa+Aezu5B3AC9
-V2XmCqucei8BW2Qdcj0wdc17Ua4GE9E5EkUIFfrdH08D6yhZzb/tGHM5ZekH747x
-wYtNpgnmLADmYXV/ClnhLv2ogI+UIS5EbOVREzpYzpxzsuaXyMdOs9LBpCwsLAoR
-X5OAfFXCiCYT4sxCqe3Rz64QiLefw4F2wA9dj1e91vE9zpTf+LA+8f4NRtJqJ4qw
-8Ctb+MKEi4KhTlRux6a+75gWvYd51+d+JnzMTCy7ZfOMAwArzIeO3Clb65ljr1JL
-GjOJIZtbhRtHeD6+Rle0
-=GQDb
+iQJ8BAEBCABmBQJVxBB4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2M0VCRUYxOEZGRkExNTY5MDA5NEMzQzBD
+QTFBNTc1NUI2OUU3RUNCAAoJEMoaV1W2nn7LE2AP/2nreTxOJdhjDhuRakiKbzNI
+D+bY2oYKkBCNF0rb3vg4cVzXWK3QHnbhm2CZuDhJmYoo4Ub1XQ/Yplw52vFyy8ZS
+BRLNtIyYsKxTRVA+etswSZnJpkAtpMvMVMTCMtbgbVmF/Z8sBH/aHInqz7JZnfcR
+JeJQDju4B6YWFXSTt5qtlvMDtfE3okxDnchLSscMjOVX4Q3mJakosgIQfm6Bnkqv
+9SjiAHtdiFrNouKJtpuOOomsUdtXD1NAbfQ7trBuvbvxhNZxaMboHKxBTNkzd43H
+R88dRX9Fa30vDZMH+AVGkHZP6evG5go8P5ppkCQmQwaSpaFP1ES7ilk8v63UiFDn
+OIoISjk68fyAV1PhFUr+9Jinz2CJsh6nw8kj6rPAWn3e8hIh1TBKmsJKJ6OTNLK9
+pgI1EyUd+WswXUKw3lCbyPhcQ48xUV2IA0uPT/ot/nM6JchM5kKLJYTBY0xlMQhX
+ypHWQlTBwRMIKMVO6OTIO1sy7vPwTJ97mKJr330Ags/h7iXIaErxG+XUEXa2ZpL1
+pgQUaIpfwz8Ob7zE5HRc1Crp59bAHHuqKsLCPsTUNVKuqiIIy7Nrzfq7EycTYEBh
+Cn0z0PygRGmh7jNONNhPc6txSjnJKnZRX4QMCO63oQEf5RWjRrFXEY6QsbSNN7F3
+RIrYCqQanZH/w/JleR0e
+=G0+d
 -----END PGP SIGNATURE-----
