@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DESCRIPTION=Fully automated disaster recovery, suppors broad variety of backup strategies and scenarios.
+EAPI=5
+HOMEPAGE=http://relax-and-recover.org/
+IUSE=udev
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/openssl net-dialup/mingetty net-fs/nfs-utils sys-apps/gawk sys-apps/iproute2 sys-apps/lsb-release sys-apps/util-linux sys-block/parted sys-boot/syslinux virtual/cdrtools udev? ( virtual/udev )
+SLOT=0
+SRC_URI=mirror://sourceforge/project/rear/rear/1.17/1.17.1/rear-1.17.1.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=367f9a62f45e165e0b2ef20f72d12bf3
